classDiagram
  class User {
    +Long id
    +String fullName
    +String email
    +String passwordHash
    +String phone
    +String preferredLanguage
    +Long joinedOrganizationId
    +joinOrganization(orgId: Long): User
    +updateProfile(updated: User): User
  }

  class Admin {
    +Long id
    +String fullName
    +String email
    +String role
    +String adminLoggedIn
    +String adminUserEmail
    +login(email: String, password: String)
    +googleLogin(email: String)
    +logout()
    +viewDashboard()
    +viewOrganizations(status: String)
    +viewOrganizationDetail(orgId: Long)
    +manageUsers()
    +manageDonations()
    +manageActions()
    +reviewParticipations()
    +reviewPlatformMetrics()
    +approveOrganization(orgId: Long)
    +seedDonations(organizationId: Long)
  }

  class Organization {
    +Long id
    +String name
    +String legalAddress
    +String taxIdentificationNumber
    +String primaryContactName
    +String primaryContactEmail
    +String primaryContactPhone
    +String logoUrl
    +String description
    +String mission
    +Long adminUserId
    +OrganizationStatus status
    +approve(superAdmin: boolean)
  }

  class CharityAction {
    +Long id
    +String title
    +String description
    +BigDecimal targetAmount
    +BigDecimal collectedAmount
    +ActionStatus status
    +Long organizationId
    +String organizationName
    +String categoryName
    +LocalDate startDate
    +LocalDate endDate
    +String location
    +String mediaUrls
    +create(action: CharityAction): CharityAction
    +update(actionId: Long, updated: CharityAction): CharityAction
  }

  class Donation {
    +Long id
    +String donorName
    +String donorEmail
    +BigDecimal amount
    +DonationStatus status
    +Long actionId
    +Long donorUserId
    +PaymentMethod paymentMethod
    +String transactionId
    +createdAt: LocalDateTime
  }

  class Participation {
    +Long id
    +String participantName
    +Long participantUserId
    +Long actionId
    +String actionTitle
    +String roleInAction
    +LocalDateTime joinedAt
  }

  %% Relationships
  Admin ..> User : maps to role SUPER_ADMIN
  User --> Organization : joinedOrganizationId
  Admin --> Organization : adminUserId / approval
  Admin ..> CharityAction : reads and seeds donations
  Admin ..> Donation : aggregates and reviews
  Admin ..> Participation : reviews
  Organization "1" o-- "*" CharityAction : provides
  CharityAction "1" o-- "*" Donation : receives
  CharityAction "1" o-- "*" Participation : has
  User "1" o-- "*" Donation : gives
  User "1" o-- "*" Participation : participates
